--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "angular5-csv": "^0.2.10",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "ng2-file-upload": "^1.3.0",
