--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
               "src/styles.css",
               "src/assets/css/photon.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/jszip.min.js"
+            ]
           },
           "configurations": {
             "production": {
