--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets/css/photon.css"
             ],
             "scripts": [
-              "src/assets/js/jszip.min.js"
+              "src/assets/js/jszip.min.js",
             ]
           },
           "configurations": {
