--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular5-csv": "^0.2.10",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jsonata": "^1.5.4",
     "ng2-file-upload": "^1.3.0",
     "ng2-smart-table": "^1.3.5",
     "ngx-file-drop": "^4.0.6",
